Improve UX and update domain references
- Added loading state to share button with visual feedback
- Button disabled and shows 'Creating invitation...' during processing
- Removed optimistic navigation - wait for actual success
- Updated all meta tag URLs to invite.rndev.site
- Better user feedback with proper timing

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="You're Invited!" />
     <meta property="og:description" content="You have received a special invitation. Click to view details." />
-    <meta property="og:image" content="https://invite-react.vercel.app/invite-icon.svg" />
-    <meta property="og:url" content="https://invite-react.vercel.app" />
+    <meta property="og:image" content="https://invite.rndev.site/invite-icon.svg" />
+    <meta property="og:url" content="https://invite.rndev.site" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="You're Invited!" />
     <meta property="twitter:description" content="You have received a special invitation. Click to view details." />
-    <meta property="twitter:image" content="https://invite-react.vercel.app/invite-icon.svg" />
+    <meta property="twitter:image" content="https://invite.rndev.site/invite-icon.svg" />
     
     <title>Invitation</title>
   </head>
