Fix Open Graph social media preview issues
Based on best practices research:
- Created proper 1200x630 OG image (correct 1.91:1 aspect ratio)
- Icon centered at 200x200 on white background (prevents cropping)
- Enhanced crawler detection (catches more bots/crawlers)
- Fixed image dimensions in meta tags (was 1200x1200, now 1200x630)
- Updated all references from invitation-preview.png to og-image.png

This fixes:
- Social previews showing index.html instead of dynamic content
- Icon being cropped/zoomed in social previews
- Pinterest Rich Pin detection failures
- Twitter card validation errors

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Create Beautiful Invitations" />
     <meta property="og:description" content="Create and share beautiful, customizable invitations for any event. Free, easy-to-use invitation creator." />
-    <meta property="og:image" content="https://invite.rndev.site/invitation-preview.png" />
+    <meta property="og:image" content="https://invite.rndev.site/og-image.png" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://invite.rndev.site" />
     
@@ -23,7 +23,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Create Beautiful Invitations" />
     <meta property="twitter:description" content="Create and share beautiful, customizable invitations for any event. Free, easy-to-use invitation creator." />
-    <meta property="twitter:image" content="https://invite.rndev.site/invitation-preview.png" />
+    <meta property="twitter:image" content="https://invite.rndev.site/og-image.png" />
     
     <title>Create Beautiful Invitations - Invitation Creator</title>
   </head>
